Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19255

[Windows] Cloned kit loses the compiler when Qt Creator is restarted

    XMLWordPrintable

Details

    Description

      When the compiler of a cloned kit is changed, the compiler setting is lost i.e. it is <no compiler> when Qt Creator is restarted. The compiler needs to be set again and the kit works fine - until you need to restart the Qt Creator again. If the cloned kit has the same compiler as the original, the problem is not reproducible.

      We were able to reproduce this with LLVM 5.0 32 bit for Windows when cloning Desktop Qt 5.9.2 MSVC2015

      32bit, but it doesn't seem to be tied to any setup. Steps to reproduce:
      1. In Build and Run -> Kits: clone auto-detected kit
      2. In the cloned kit, enter "win32-clang-msvc" in Qt-mkspec, select <No compiler> for C and "LLVM 32bit based on MSVC2015" for C++
      3. Close Qt Creator and restart it
      4. The kit has <No compiler> for C++ compiler

      This seems to be regression and doesn't seem to happen on mac, but I didn't test all the possible combinations.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            qtcomsupport Qt Support
            Votes:
            2 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes