Clang-cl: Fix restoration of clang-cl compiler

compilerCommand was not restored, so isValid failed.

Task-number: QTCREATORBUG-19255
Change-Id: Idc65aaf2eaad348f05cdf4dfd057bbd10c6c4e4c
Reviewed-by: David Schulz <david.schulz@qt.io>